making progress on styling debugged issue note content not wraping

--- a/lambda_notes/src/index.css
+++ b/lambda_notes/src/index.css
@@ -9,6 +9,7 @@
 
 body {
 margin: 0;
+font-family: 'Fira Sans', sans-serif;
 }
 
 /**
